--- a/UPLD/倪海厦_人纪_针灸_第一章_针灸的使用时机.md
+++ b/UPLD/倪海厦_人纪_针灸_第一章_针灸的使用时机.md
@@ -18,29 +18,29 @@ tags:
 <!-- more -->
 针灸篇内容采用我国古籍之《针灸大成》为教授书本。此书是明杨继洲所编着。十二经络与奇经八脉的辨症法，特效穴的选用等，我采用《针灸甲乙经》与《针灸聚英》为参考书籍。
 
-## 一、第一章 针灸的使用时机
+## 第一章 针灸的使用时机
 
 各位同学!今天是人纪班第一天开始上课，以后你们会慢慢学到很多中医的知识。我把你们统统当作完全没有中医的根基，完全不懂，所以我们从头开始讲。有关针灸的起源、发源及历史，坊间的书上写了很多，我们不浪费时间讲，我们要讲书上没有的。针灸的使用时机、针灸的禁忌。针灸的使用比中药早了约一千年。从古到今，中医的针灸在施治上有几个大原则。
 
-### （一）针灸的使用时机
+### 一、针灸的使用时机
 
 遇到气血大虚、重病、刚刚失过很多血、病患完全没有元气的时候，这时候我们不下针。另外，刚做完爱，行完房事后，也不针。时机不好、运动过后、大汗后也不针。喝酒后，不针。体力不够，不下针。针可以用在所有的病上面，从感冒到癌症都可以。针灸及中药都是可以独立成为中医的一个部门的。所以，此时我们不谈中药，只谈针灸来治病。而日后我在教各位《伤寒》《金匮》时，大家也一样把针灸忘掉，全用中药来治病。
 
 灸就是“久”下加一个“火”字。用灸时就必须用艾绒，为什么要用这个艾草，在古代，部队里没有西医，只有中医，那个时候都是中医。那部队沿路开拔的时候最重要的就是补给，除了食物以外，最重要的是水，没有水的话部队就不能行动。中医如何去找这个水呢？艾草它的生命力很强，再艰难的环境下都可以找得到它。**艾有一个特性，就是向下**，艾会自己去找水,找到水以后烟就往上升。如果部队要找水，就叫阿兵哥将艾草摊在土里烧，这时叫人到各处去看看，看到地上有烟冒出来的地方，那个地方下面就有水。为什么要灸？当针力不足的地方，我们就会用到灸，气血大虚时，可用灸的方式处理。
 
-#### 1.隔姜灸
+#### （一）隔姜灸
 
 我们有几种灸法，最普遍的就是“隔姜灸”。我们隔姜灸就是切一片大概五十元大小的生姜，先戳几个洞，我示范给诸位看。拿一些艾绒捏成金字塔状，再将它放在生姜上面，这样一个单位叫“一壮”。在灸的时候，这个生姜片不用换。不要灸五壮，就换五片生姜，烧到温热，不用烧到很烫。**感觉温热**，不用很烫时就换一壮，在旁边放一个水盆，未烧完的艾就丢到水里熄灭掉。若不放水在里面，碗就会烧破。
 
 灸的时候，**灸单数不灸双数，艾为纯阳，取阳数。** 若灸后起了水泡，就从皮肤旁边用消毒过的针刺一个小洞，把水慢按排出来。不要把皮肤撕掉免得造成疤痕，洒上一些硫磺粉及大黄粉就可以了。因为艾本性向下，它的本性是属阳的。譬如说，不论是什么病，**灸膏肓穴灸百壮，无所不疗。** 灸到口干舌燥都没有关系，小便都会有艾草味。
 
-#### 2.隔盐灸
+#### （二）隔盐灸
 
 第二个灸法是“隔盐灸”，我们在灸的时候，用盐巴填满**神阙穴（就是肚脐）**，再放艾绒上去灸。先将盐炒熟。精盐不能用，要用青盐，要等盐变温一点了，凉了，再倒在神阙穴上，否则会把肚皮烧坏了。古病人下利时不管是寒利或热利（**只要是食物没有消化就是寒，热利的话味道会很臭**），灸神阙就可以了。
 
 灸针对寒症比较多。
 
-#### 3.隔蒜灸
+#### （三）隔蒜灸
 
 第三个灸法叫“隔蒜灸”，灸一个就是一壮。**当久咳的时候**，因蒜是白色的，辛辣色白，才能入肺，放在舌上。因为舌为心表，把舌头往外伸，灸后心脏力量加强。心和肺最接近，这时候我们去灸，咳嗽就会好。那你不要拿生姜，要用蒜，肺的问题，我们要用隔蒜灸。
 
@@ -68,7 +68,7 @@ tags:
 
 意思就是叫我们对称治疗。但像刚才带状疱疹当然是在天应穴[^2]上灸。临床下针是左病右治、右病左治。但大陆的中医没有看过这种书，而且在文革烧掉了好多好书，好的中医也都给斗争掉了。所以他们治不好病，只好变些花哨的手法来吸引病人，变成针上头放个艾绒，让病人更痛苦。古有名训，针就是针，炙就是灸，我们要分开使用。
 
-#### 4.米粒灸
+#### （四）米粒灸
 
 另外，补充一点。我们还有一个灸法是“米粒灸”。我们把一点点的艾绒，捏成像米粒一样大。用凡士林先涂在欲灸的穴道上，将它放在上面灸。用在什么地方呢，如鼻窦炎 、鸡眼 ，我们用香来点，灸三个、五个，就看病有多深。这是灸的大原则。
 
@@ -78,7 +78,7 @@ tags:
 
 最高明的医生，就是把病治好了，又不伤病人的元气。而西医的手术，即使宣称手术很成功，但这个刀开下去后的结果如何，你需要慢慢去体会它！若去开刀，还是会长回来的。当然，如果是你的情敌，叫他给西医开刀好了！
 
-### （二）针灸的急救法
+### 二、针灸的急救法
 
 我们再下来讲“针灸的急救方式”，我们可用在很多地方。当有人发病，昏迷 过去时，他可能是心脏病，也可能是中风，溺水。**我们不管是什么原因，第一个先针“人中”，** 就是鼻子下方、嘴唇上方的水沟处，把它分三段，取上面三分之一处下针，下针时，针要斜刺往上，若没有针在手上呢，掐人中。
 
@@ -88,13 +88,13 @@ tags:
 
 若仍未醒，**再将脚的十个趾头尖放血。** 若还没醒，就再下**涌泉穴** 。将脚掌一握起来，会看到“人”字纹，人字纹的纹头就是穴道。这是我们的急救大穴，你不要拿一个三寸针下去。**若还不醒，就在“百会”放血。**“百会穴”一般是放血用,我们不下针。当病人整个脸都是呈现红色时，就是刚中风，就在百会放血。百会穴怎么找呢？从额头往上到顶，再由两耳尖直上，两线相交的一点，再往后半寸，会摸到一个凹洞，就是百会穴。放血时，让病人躺下头靠着床沿往下垂，在百会放血后，病人会感到一阵清凉，凉到嘴巴，就可以讲话，凉到手脚，手脚就可以活动了。在急救时，管他有无执照，没有人会告你的，急救就去救。若碰到美女，就用嘴对嘴呼吸也可以。不要管太多！这是我们的急救方式。
 
-### （三）火罐的使用和时机
+### 三、火罐的使用和时机
 
-#### 1.火罐使用的时机
+#### （一）火罐使用的时机
 
 针灸的器具,还有火罐。过去是用大小不同的竹子，做成杯子一样。把杯子先用火烧一下，就罩在要拔的地方。病人常会大叫一声，因为拔的力量相当强。过去的郎中带着各式各样的火罐，里面呢，放只蚂蝗，这个吸血的蚂蝗，会吸脓，还有麻醉作用，这是他的天性。伤口烂了，里面化脓，对它来说是人间美食啊!在现代呢，美国有消毒过的蚂蝗。
 
-#### 2.火罐的使用
+#### （二）火罐的使用
 
 我们用真空的拔火罐，火罐有不同的 size，用真空的来吸。我在介绍火罐，并没有介绍哪个厂商。火罐用的时候就要拿火罐枪将空气吸出来，拿的时候后面的尾巴一拔，气就放出来了。
 
