--- a/UPLD/倪海厦_人纪_针灸_第二章_针灸穴位丈量方法.md
+++ b/UPLD/倪海厦_人纪_针灸_第二章_针灸穴位丈量方法.md
@@ -18,7 +18,7 @@ tags:
 <!-- more -->
 针灸篇内容采用我国古籍之《针灸大成》为教授书本。此书是明杨继洲所编着。十二经络与奇经八脉的辨症法，特效穴的选用等，我采用《针灸甲乙经》与《针灸聚英》为参考书籍。
 
-## 一、第二章 针灸穴位丈量方法
+## 第二章 针灸穴位丈量方法
 
 我们进入第二章，先介绍这穴道丈量的方法。
 
@@ -68,9 +68,9 @@ tags:
 
 针灸做得好是立竿见影的。做得不好，就没有感觉，但也不会坏事。除非你扎得太深了，古人才不去负你的责任呢。身上有非常多的穴道，都可以用透针，透的时候不但不伤筋，不伤骨，不伤血脉，连一滴血都看不到，脚伤、腕骨痛，针一下去当场痛就去掉了。中医如果以后发展起来，全世界医疗费用可减少非常多。还有放血针，现在放血片。古代的针呢，拿给你们看。
 
-### （五）黄帝时代九针型式[^1]
+### （五）黄帝时代九针型式
 
-这个九针图，你们在《针灸大成》里面看到的九针，这是原图，原样、原寸，手工做的。毫针用得最多。各种针的形状，各有不同使用的方向。过去的老师傅的针呢，都是用棉布包拿下来，口水沾一下，隔着衣服，针就下去了。针弯掉了，丢在地上磨一磨。一样就下去了。以前没有不锈钢，不是金就是银，金太软银太脆，都必须要做粗一点。我们现在用的针就不会断了。
+这个九针[^1]图，你们在《针灸大成》里面看到的九针，这是原图，原样、原寸，手工做的。毫针用得最多。各种针的形状，各有不同使用的方向。过去的老师傅的针呢，都是用棉布包拿下来，口水沾一下，隔着衣服，针就下去了。针弯掉了，丢在地上磨一磨。一样就下去了。以前没有不锈钢，不是金就是银，金太软银太脆，都必须要做粗一点。我们现在用的针就不会断了。
 
 只有针身跟针柄接合处容易折断，所以我们下针都会留一点针身在外面，不会整只插下去。若一段断在里面，两指同时一下压旁边的肉，针就出来了。有人说断了针会跟着跑，那是胡说八道。我扎到现在，还没断针过，因为针是不锈钢的，过去发生的事情，现在不一定会发生。
 
