--- a/UPLD/倪海厦_人纪_针灸_第三章_十二经纳天干地支与十二正经井荣俞原经合.md
+++ b/UPLD/倪海厦_人纪_针灸_第三章_十二经纳天干地支与十二正经井荣俞原经合.md
@@ -18,7 +18,7 @@ tags:
 <!-- more -->
 针灸篇内容采用我国古籍之《针灸大成》为教授书本。此书是明杨继洲所编着。十二经络与奇经八脉的辨症法，特效穴的选用等，我采用《针灸甲乙经》与《针灸聚英》为参考书籍。
 
-## 一、第三章 十二经纳天干地支与十二正经井荣俞原经合
+## 第三章 十二经纳天干地支与十二正经井荣俞原经合
 
 ### （一）十二经纳天干歌
 
@@ -29,7 +29,7 @@ tags:
 > 庚属大肠辛属肺，
 > 壬属膀胱癸肾脏，
 > 三焦亦向壬中寄，
-> 心包同归入癸水。
+> 心包同归于癸水。
 
 次序不重要，心包就是癸，三焦就是壬，甲是胆，乙是肝，把他编入七言绝句比较好背，丙是小肠。那我们为什么要知道天干，还有地支呢？
 
@@ -40,7 +40,10 @@ tags:
 > 申胱酉肾心包戌，
 > 亥焦子胆丑肝通。
 
-天干有十个，地支有十二个，干支合在一起，有六十个，成一甲子循环。这些我们慢慢会用到，慢慢去习惯他，甲乙丙丁，看到不要紧张，我会一步一步带你们进去。最主要是它的属性，就是木火土金水，五行的属性。甲乙是木，丙丁是火，脾胃是土，庚辛属金。我们会用纳天干，就是取它的五行。中医的五行理论木火土金水，就是不易让他人了解。八纲辨证法，用别的方法还不行，仍要用阴阳五行，木生火，火生土，土生金，金生水，在每一个行的中间，我们再分阴阳。阳木，还有阴木，阳火，阴火，阳土阴土，木火土金水刚好都有分阴阳。
+天干有十个，地支有十二个，干支合在一起，有六十个，成一甲子循环。这些我们慢慢会用到，慢慢去习惯他，甲乙丙丁，看到不要紧张，我会一步一步带你们进去。最主要是它的属性，就是木火土金水，五行的属性。甲乙是木，丙丁是火，脾胃是土，庚辛属金。我们会用纳天干，就是取它的五行。中医的五行理论木火土金水，就是不易让他人了解。八纲辨证法，用别的方法还不行，仍要用阴阳五行，木生火，火生土，土生金，金生水，在每一个行的中间，我们**再分阴阳**。阳木，还有阴木，阳火，阴火，阳土阴土，木火土金水刚好都有分阴阳。
+
+
+![03](https://preview.cloud.189.cn/image/imageAction?param=D58DD865A2C2783EF8B0401F15147DC15FA9DC6F368641962541CAE0F3E3F3B0D27BD88CCE38AD96D383579A50EC638734BA983EDBB3FFC3B2220DF9A0ED1E7E2A77002C63C791E1698EDDF0C171DF08707905F122637533C6297E51D9B7EE73DFCFBF069BF09C54EA918531B9C02D28)
 
 所以有十个天干数，代表十个天干。**木代表肝，心脏是火，脾脏是土，肺脏是金，水是肾脏**，同样的，水又分阴阳，五行都有阴阳的现象。那我们讲的脏，就好像收藏的藏。五个脏，就是收藏，就是阴。腑是消化系统，就是所谓的阳，这里面阴木就是肝，阳木就是胆，阴火就是心，阳火就是小肠，火有两个东西，心脏是一个，小肠是一个。脾土就是阴，脾是内脏，和阳土相对，就是胃。肺是阴脏，所以肺脏是阴，阳是大肠，水就有阳水跟阴水。如果我们讲脏的话，就是阴，腑的话就是阳，所以肾脏的话，就是阴，阳水就是膀胱。代号有他的意义，我先用个例子你听。
 
@@ -52,7 +55,7 @@ tags:
 
 什么叫正常人，我在临床上常问病人，谁告诉你有肝病?答，肝病专家。外面的招牌都是专科医生，而我是健康医生。中医跟西医正好是相反的，西医是把病复杂化，中医是要知道什么叫做常人。如果你被训练出来，一开始就查病，查了半天还是看不好病。如果你是被我训练出来，是不是不正常，你一看就知道了!中医不是要你看多少书，而是你要“悟”，悟最重要!我是想办法让你知道什么是正常人。心脏的火往小肠下导，所以，正常人的心脏和小肠是一样的速度、一样的温度、一样的压力。**所以中医是物理医学**。爱因斯坦是一位物理学大师，他一辈子没有上过太空。登陆月球是阿姆斯特朗，对不对？他的办公室很小，光用黑板、粉笔，就可以算出黑洞，从NASA收到的数据，就可证明爱因斯坦是对的。
 
-中医就是物理医学，**物理学非常注重，时间、速度、温度还有压力。** 他没有去过黑洞，就可以算出来。中医就是按照时间、速度、温度还有压力，你的身体就是一个小宇宙。这就是中医，就是站在外面可以看到里面。小肠因为有这个热，食物才会消化。小肠那有那么聪明，竟然会消化食物。你把小肠拿出来，看它会不会消化食物，一但失去温度它就不会消化了。正常人是这样子。所以小肠被定义为火，那食物消化以后，会进入到大肠，大肠会把食物的水拿走。你吃猪大肠试试，大肠那么聪明会把食物的水拿走吗?大肠环绕着小肠，小肠是火，水在上面走，火在下面烧，大肠的水因为很热而气化。所以这个蒸气才能透过肠壁上升，大肠与肺相表里，水会再回到肺里面，变成正常的津液，残渣才会排出来，这过程在二十四小时一定要完成，这是一个初浅的概念。
+中医就是物理医学，**物理学非常注重时间、速度、温度还有压力。** 他没有去过黑洞，就可以算出来。中医就是按照时间、速度、温度还有压力，你的身体就是一个小宇宙。这就是中医，就是站在外面可以看到里面。小肠因为有这个热，食物才会消化。小肠那有那么聪明，竟然会消化食物。你把小肠拿出来，看它会不会消化食物，一但失去温度它就不会消化了。正常人是这样子。所以小肠被定义为火，那食物消化以后，会进入到大肠，大肠会把食物的水拿走。你吃猪大肠试试，大肠那么聪明会把食物的水拿走吗?大肠环绕着小肠，小肠是火，水在上面走，火在下面烧，大肠的水因为很热而气化。所以这个蒸气才能透过肠壁上升，大肠与肺相表里，水会再回到肺里面，变成正常的津液，残渣才会排出来，这过程在二十四小时一定要完成，这是一个初浅的概念。
 
 慢慢讲到《黄帝内经》，我们会讲得越来越深。中医为何可以治疗癌症，很简单，你们听过人死在乳癌、肺癌、淋巴癌、肝癌，却有没有人死在心脏癌?只有死在心脏病，而不是心脏癌。心脏不会得癌，因为心脏很热，癌细跑经过心脏，像飞蛾扑火一样。若把全身从头到脚变成像心脏一样，很热，癌细胞就没有了。人身体很热，怎么证明，冬天一吐气，若吐出来不是白色的蒸气，那个人是火星人，就不是地球人。人都会有气，所以气是热的，中医的观念是热气，就是蒸气。这是我简单举的例子。
 
@@ -60,7 +63,9 @@ tags:
 
 地支歌，简单讲，就是寅时开肺，寅时大家都知道是三点到五点，是凌晨三点到五点。大肠开卯时，卯时，是五点到七点。胃开辰时，七点到九点。脾脏开巳时，九点到十一点早上，心开午时，十一点到下午的一点，小肠，是一点到三点。再来是膀胱，是三点到五点。再来是肾脏，五点到七点。心包经呢，七点到九点。晚上九点到十一点是三焦经。九点到十一点再回到胆，胆经是凌晨，晚上十一点到凌晨一点，最后再回到肝经，一点到三点。我们为什么需要知道这些，第一个可帮助我们做诊断。
 
-举个例子给你听，病人来看你，这个人脸色黄黄的，再看手掌暗红色，问一个问题，晚上好不好睡?答：每天晚上一点多就醒过来，从头到尾没问第二句。第一次问诊，睡觉好不好就结束了。我在阴阳五行的时候，会慢慢教给大家一个观念。在阴阳五行木火土金水中，又可分成青赤黄白黑。肺是白色的，金属的原色是白色的，真正的纯金是白金啊，肺是白色的，心呢，火嘛!赤色，红色，肺比心脏大很多，很多的白加一点红，就是手掌的颜色粉红色，手掌表示是肚脐以上的颜色。肝脏是心脏的妈妈，心脏里面的血的来源是来自肝脏，肝脏是提供者。你在睡觉时，那时肝脏是最忙的，它把身上所有毒素代谢掉，如果这血是正常的，量又好，质又好，跟肺白合在一起，颜是最好的。
+![04](https://preview.cloud.189.cn/image/imageAction?param=1CF9A770C2DD5DA97A317A736DECB7745923BFA582B9E52BE5EFC94B889A6EF6A67477A0D9100FEC3F9C1D32B96DD1F74AD1DB5DFBB0AC96CF5509FDEF5614D343897F94FCBC3C3C1B4BA697C6DE4C460451970196BA7379F266D963ACDA87D8E00618DAF027238AE5351B9808D74CA6)
+
+举个例子给你听，病人来看你，这个人脸色黄黄的，再看手掌暗红色，问一个问题，晚上好不好睡?答：每天晚上一点多就醒过来，从头到尾没问第二句。第一次问诊，睡觉好不好就结束了。我在阴阳五行的时候，会慢慢教给大家一个观念。**在阴阳五行木火土金水中，又可分成青赤黄白黑** 。肺是白色的，金属的原色是白色的，真正的纯金是白金啊，肺是白色的，心呢，火嘛!赤色，红色，肺比心脏大很多，很多的白加一点红，就是手掌的颜色粉红色，手掌表示是肚脐以上的颜色。肝脏是心脏的妈妈，心脏里面的血的来源是来自肝脏，肝脏是提供者。你在睡觉时，那时肝脏是最忙的，它把身上所有毒素代谢掉，如果这血是正常的，量又好，质又好，跟肺白合在一起，颜是最好的。
 
 当有一天呢，你有肝硬化 ，肝肿瘤，有东西在里面的时候，中医称为实。没有东西在里面，中医叫做虚。有东西在里面的时候，代表空间变小了，空间少了但血流的量仍是一样没变，还没把毒素完全代谢掉，大量的血又跑回心脏去了，红的增加，白的一样，所以表示颜色慢慢变黑了，肝病的人手就会变成暗红色。这两个时间，应该是最好的睡觉时间。如果你每天一点起来，三点以后才能睡觉，你的身体就已经告诉你，肝脏有问题了。这时候西医的检验报告仍说你很好。中医健康的定义跟西医不一样。西医的健康标准，是在这以上很正常，在这以下就有病。人不是机器，机器有时坏了就坏了，人不是这样子。中医分成三阶段，当你是正常的人，一得到症状的时候，身体马上就知道了。
 
@@ -78,41 +83,39 @@ tags:
 
 ![05](https://preview.cloud.189.cn/image/imageAction?param=79AAEF8B1E00F6500919123A42D940266C708E86B47E81AA160ED9E7A2B243A67D8B65816A17A9E9724EE3DCA7E3853886860BB9AD7BD308A62A92C1576E65CF375FDDA94442EDA988FB2E2481AE317C240EABDB96F3DD760122EE3D5755E715CE4DA78393BEA8214579FDDC0194EF2E)
 
-第三，我们介绍经络之前，先介绍基本的观念。正经有十二条，奇经有八条，这个十二正经，每一条经络，不管是阴经还是阳经。有六阳经、六阴经，加起来共十二条。奇经八脉有任脉、督脉、冲脉、带脉、阳蹻，阴蹻、阳维、阴维。正经十二条。十二正经中，所有的阳经及所有的阴经，都会介绍到井荣俞经合，这个俞就是运输的意思。古体字是有一个“月”边，古书上不一样，井荣俞经合都是手不过肘，足不过膝。我们下针的时候，在手肘以下，膝盖以下下针，这个字念怎么样无所谓，不要在形上面去争，功能最重要。所以，看《针灸大成》有手不过肘，足不过膝歌，对不对。
+第三，我们介绍经络之前，先介绍基本的观念。正经有十二条，奇经有八条，这个十二正经，每一条经络，不管是阴经还是阳经。**有六阳经、六阴经**，加起来共十二条。奇经八脉有任脉、督脉、冲脉、带脉、阳蹻，阴蹻、阳维、阴维。正经十二条。十二正经中，所有的阳经及所有的阴经，都会介绍到井荣俞经合，这个俞就是运输的意思。古体字是有一个“月”边，古书上不一样，井荣俞经合都是手不过肘，足不过膝。我们下针的时候，在手肘以下，膝盖以下下针，这个字念怎么样无所谓，不要在形上面去争，功能最重要。所以，看《针灸大成》有手不过肘，足不过膝歌，对不对。
 
 我把它分阴阳给你看，阴经有：手太阴肺经、手少阴心经、手厥阴心包经……我在讲阴经的时候，它有五行的排行，叫做木火土金水，你这样看就很清楚。任何的阴经，他的井穴通通是木，任何荣穴都是火，每一条阳经都有井荣俞经合，属性是金水木火土。阴经和阳经的每一条经，经上面都有一个络，叫络穴，什么叫络穴，这两条不交接，平行，是经，光这样不行，人就是散了。所以，每一条经都一定要有它的络穴。阳经比阴经多一个东西，就是原穴。在介绍经络时会告诉你。每一个穴道都有他的属性，都有它的功能所在。在介绍经络之前，基本的概念要了解，这样就很简单了。
 
-### （四）病在脏取井穴[^2]
+### （四）病在脏取井穴
 
-这个井呢?病在脏取井，所谓病在脏取井就是病在越深的地方，我们要在指头末稍，井穴通通在手指头或脚趾头的末稍，非常的敏感。比如说，足阳明胃经的井穴，我们叫厉兑，位在第二个脚趾头。我们下针的时候，“井主心下满”，临床上，在动脉血管堵塞，针一下去，病人会感到有个人在里面扫地，有人在清洗，速度就那么快，刚才有看过针的大小。你不会拿三寸针去扎，没有这种呆子。用一寸针嘛!刺一点点即可。身上虽有其它穴道可用，但没有井穴好。所谓堵塞，西医讲的动脉血管堵塞，中医是讲心剧烈的疼痛，这个针一下去的时候，痛马上去掉，就是所谓的实症。
+这个井呢?病在脏取井[^2]，所谓病在脏取井就是病在越深的地方，我们要在指头末稍，井穴通通在手指头或脚趾头的末稍，非常的敏感。比如说，足阳明胃经的井穴，我们叫厉兑，位在第二个脚趾头。我们下针的时候，“井主心下满”，临床上，在动脉血管堵塞，针一下去，病人会感到有个人在里面扫地，有人在清洗，速度就那么快，刚才有看过针的大小。你不会拿三寸针去扎，没有这种呆子。用一寸针嘛!刺一点点即可。身上虽有其它穴道可用，但没有井穴好。所谓堵塞，西医讲的动脉血管堵塞，中医是讲心剧烈的疼痛，这个针一下去的时候，痛马上去掉，就是所谓的实症。
 
-### （五）病变于色取荣穴[^3]
+### （五）病变于色取荣穴
 
-《黄帝内经》指出病变在颜色上，青色为肝，红色主的是心，脾主黄色，肺是白色，肾是黑色。当有颜色的病出现了，一看见到发黄是脾病，发红是心脏病，这个人脸色发黑是肾脏病。遇有颜色出现，我们选取穴道的时候用荣穴。
+《黄帝内经》指出病变在颜色上，青色为肝，红色主的是心，脾主黄色，肺是白色，肾是黑色。当有颜色的病出现了，一看见到发黄是脾病，发红是心脏病，这个人脸色发黑是肾脏病。遇有颜色出现，我们选取穴道的时候用荣穴[^3]。
 
-### （六）病在时间者取俞穴[^4]
+### （六）病在时间者取俞穴
 
-这个俞穴，你们可以叫它 shu 穴，治时间的病。每一条经都有他的俞穴所在。凡按照时间发病的，如每天晚上十二点起来，病是发在胆经上，取胆经的俞穴。按地支歌去判断。过去有的是用荣穴，例如有的人每天晚上因发气喘起来，或每天晚上三点钟起来，要五点才能睡，我们要下他的肺经的俞穴。这出自《针灸甲乙经》[^5]，用俞穴的效果非常好。也可以用荣穴，也有效果。我的方法是：亲人用俞穴，敌人的话就选荣穴，比较痛。两个穴道都有效。所以按照时间发的病，要如何治疗，现在讲完地支歌，你就已经知道答案了嘛。按时间上扎，针灸是非常灵活的，不要做乖乖牌，皮一点比较好，中医比较接近哲学。
+这个俞穴，你们可以叫它 shu 穴，治时间的病。每一条经都有他的俞穴[^4]所在。凡按照时间发病的，如每天晚上十二点起来，病是发在胆经上，取胆经的俞穴。按地支歌去判断。过去有的是用荣穴，例如有的人每天晚上因发气喘起来，或每天晚上三点钟起来，要五点才能睡，我们要下他的肺经的俞穴。这出自《针灸甲乙经》[^5]，用俞穴的效果非常好。也可以用荣穴，也有效果。我的方法是：亲人用俞穴，敌人的话就选荣穴，比较痛。两个穴道都有效。所以按照时间发的病，要如何治疗，现在讲完地支歌，你就已经知道答案了嘛。按时间上扎，针灸是非常灵活的，不要做乖乖牌，皮一点比较好，中医比较接近哲学。
 
-### （七）病变于音者取经穴[^6]
+### （七）病变于音者取经穴
 
-至于经穴，病变于音者。相法中，女人面大声沙骨粗，这是孤单到老，声沙就是象，骨
-头很大，肉看不到，脸又很大，这个女生一辈子孤单到老。如果是感冒，声音变了，就用经
-穴来治疗，每一条经都有它的经穴，声音是从那器官发出来。
+至于经穴，病变于音者[^6]。相法中，女人面大声沙骨粗，这是孤单到老，声沙就是象，骨头很大，肉看不到，脸又很大，这个女生一辈子孤单到老。如果是感冒，声音变了，就用经穴来治疗，每一条经都有它的经穴，声音是从那器官发出来。
 
-### （八）病起于饮食取合穴[^7]
+### （八）病起于饮食取合穴
 
-那再来讲合穴，当饮食不节，暴饮暴食就用合穴。讲到饮食，跟各位讲一个观念，什么叫饱，什么叫饿，这没有一个定义。真正对身体最好的，是吃完还要有一点饿的感觉，一年四季保持有一点饿，只要七、八分饱就好，因为这样不断训练你的胃气。治病时，只要病人饿，有一点胃气，病人就救回来了。我们从古到今死了多少人，没有人是死前是饿的（饿死的是环境造成的）。只要有饿，就救得回来。任何的重病到后来都是没有胃口。饮食不节，暴饮暴食的，还有胀满的病，我们大部分选用合穴来治疗。
+那再来讲合穴，当饮食不节，暴饮暴食就用合穴[^7]。讲到饮食，跟各位讲一个观念，什么叫饱，什么叫饿，这没有一个定义。真正对身体最好的，是吃完还要有一点饿的感觉，一年四季保持有一点饿，只要七、八分饱就好，因为这样不断训练你的胃气。治病时，只要病人饿，有一点胃气，病人就救回来了。我们从古到今死了多少人，没有人是死前是饿的（饿死的是环境造成的）。只要有饿，就救得回来。任何的重病到后来都是没有胃口。饮食不节，暴饮暴食的，还有胀满的病，我们大部分选用合穴来治疗。
 
-### （九）五脏不平衡时用原穴[^8]
+### （九）五脏不平衡时用原穴
 
-原穴呢?基本上，原穴是安五脏的，五脏不平衡时用的。阳经都有原穴。对不平衡的定义，不安的定义是什么?到讲脏腑时再告诉你们。诸位要先对原穴有个基本的观念，阳经都有原穴。
+原穴[^8]呢?基本上，原穴是安五脏的，五脏不平衡时用的。阳经都有原穴。对不平衡的定义，不安的定义是什么?到讲脏腑时再告诉你们。诸位要先对原穴有个基本的观念，阳经都有原穴。
 
 ### （十）与四季的关系
 
-井穴主冬天，脏主冬，冬天的时候刺井穴。井荣俞经合五穴，都在手肘以下或膝盖以下。如果今天扎针，你又怕出事，在手脚上扎针就不会有事。若能一针把人扎死，那还真是天才，我拜你为师。刀子刺下去都能救回来，何况扎在脚上怎么会死，很安全的。现在介绍的时间，若出问题时是夏天，我们一样取他的俞穴。声音主长夏，我们对长夏的定义，中医哦，依中国易经，在春三月的时候，这三个月，其实不是一月到三月，而走到了第三个月的最后两周，即将要转换为夏天的时候。夏天三个月，第一个月最早的两周。也就是说，春和夏交接的前后两个礼拜，春天取两个礼拜，夏天取两个礼拜，把它合并成一个月，叫长夏。春夏交接一个月、夏秋交接一个月，秋冬交接又一个月，冬天和春天交接又一个月，这是我们长夏的位置。真正我们对长夏的定义，是节气在转换或季节的交换。
+井穴主冬天，脏主冬，冬天的时候刺井穴。井荣俞经合五穴，都在手肘以下或膝盖以下。如果今天扎针，你又怕出事，在手脚上扎针就不会有事。若能一针把人扎死，那还真是天才，我拜你为师。刀子刺下去都能救回来，何况扎在脚上怎么会死，很安全的。现在介绍的时间，若出问题时是夏天，我们一样取他的俞穴。**声音主长夏**，我们对长夏的定义，中医哦，依中国易经，在春三月的时候，这三个月，其实不是一月到三月，而走到了第三个月的最后两周，即将要转换为夏天的时候。夏天三个月，第一个月最早的两周。也就是说，春和夏交接的前后两个礼拜，春天取两个礼拜，夏天取两个礼拜，把它合并成一个月，叫长夏。春夏交接一个月、夏秋交接一个月，秋冬交接又一个月，冬天和春天交接又一个月，这是我们长夏的位置。**真正我们对长夏的定义，是节气在转换或季节的交换。**
 
-这长夏不是说夏天很长，夏天都一样的。至于合穴，《针灸甲乙经》指出，味主秋，常有人味道有问题，包括嗅觉，还有人嘴巴发出金属的味道。如我嘴巴为什么那么甜，我嘴巴为什么那么苦。只要有味道的问题治在合穴，主秋，秋天。那为什么要去春夏秋冬，中医的观念，春夏养阳、秋冬这个季节是养阴，阴阳的定义，过去很多人说，阳嘛!阴嘛!指的是男人的生殖器及女人的生殖器。他以为他讲的很妙。讲人纪很简单，我给你们一个观念，看我的手臂，看得到的都是阴，阴就是有形的。力量有多大，那就是阳。比方说，为什么可以握，肝病的不可以握，握的力量有多大，肌肉的力量有多大，这些无形的就是阳。为什么我能握，肝脏好才能握，肝病的人不能握，那握的力量有多大，这是阳。看到皮肤、肌肉、血管，这些都是阴，这是阴阳的观念。所谓春天夏天要养阳，秋冬主收敛要养阴。圣人、智者告诉我们，要随着节气定，春夏要多运动，不是秋冬不用运动，而是要收敛，包括房事要节制。
+这长夏不是说夏天很长，夏天都一样的。至于合穴，《针灸甲乙经》指出，味主秋，常有人味道有问题，包括嗅觉，还有人嘴巴发出金属的味道。如我嘴巴为什么那么甜，我嘴巴为什么那么苦。只要有味道的问题治在合穴，主秋，秋天。那为什么要去春夏秋冬，中医的观念，春夏养阳、秋冬这个季节是养阴，阴阳的定义，过去很多人说，阳嘛!阴嘛!指的是男人的生殖器及女人的生殖器。他以为他讲的很妙。讲人纪很简单，我给你们一个观念，看我的手臂，**看得到的都是阴**，**阴就是有形的**。力量有多大，那就是阳。比方说，为什么可以握，肝病的不可以握，握的力量有多大，肌肉的力量有多大，这些无形的就是阳。为什么我能握，肝脏好才能握，肝病的人不能握，那握的力量有多大，这是阳。看到皮肤、肌肉、血管，这些都是阴，这是阴阳的观念。所谓春天夏天要养阳，秋冬主收敛要养阴。圣人、智者告诉我们，要随着节气定，春夏要多运动，不是秋冬不用运动，而是要收敛，包括房事要节制。
 
 针灸的穴道是可以用在保养的，我会教你们如何美颜，下次我回来！不要说，老师!你怎么变了，你是老师的儿子吗? 如果按照节气走，我们不违逆节气，寿命会延长，就不会生病。生病的人是反着走的。
 
